added some animations for the hamburger menu

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             </ul>
 
             <div class="hamburger" onclick="expandNavbar()">
-                <div class="line"></div>
-                <div class="line"></div>
-                <div class="line"></div>
+                <div class="line" id="p1"></div>
+                <div class="line" id="p2"></div>
+                <div class="line" id="p3"></div>
             </div>
         </div>
         
